# AAA-Team-Assignment

./: .gitignore  CHIweatherAPI.ipynb  Data_Cleanup_Trips.ipynb  Data_Cleanup_Weather.ipynb  README.md  SVMPred1.ipynb  Task2.ipynb  Task3_DeepLearning.ipynb  Task_3_DNN_hourly.ipynb  Task_3_SVM.ipynb  data_cleanup_trip_data.ipynb  data_cleanup_weather_data.ipynb  main.ipynb  pyproject.toml  tl_2024_17_tract.geojson
01_Data_Cleanup/: 01_1_Data_Cleanup_Trips.ipynb  01_3_Data_Cleanup_Time_Data.ipynb
Chris/: animation_tratcs.ipynb
Chris/Task 1/: CHI_POI.csv  chicago_holidays.csv  chicago_weather.csv  weatherdataAPI.ipynb
Chris/Task 2/: animation_tratcs.ipynb
Chris/Task 3/: Data Wrangling & Agg.ipynb  Tract_Clustering_unsuperv.ipynb  actuals_vs_predictions.csv
Chris/Task 3/SVM/: SVMPred1.ipynb  SVMPredhourly.ipynb
Chris/Task 4/: Draft.ipynb
