[project]
name = "aaa-assignment-env"
version = "0.1.0"
description = "AAA-Team-Assignment"
readme = "README.md"
requires-python = ">=3.9.0, <3.12.0"
dependencies = [
  "pandas",
  "numpy",
  "geopandas>=1.0.0",
  "h3>=3.7.0",
  "haversine>=2.9.0",
  "matplotlib>=3.9.0",
  "pip>=25.0.0",
  "pqdm>=0.2.0",
  "statsmodels>=0.14.0",
  "ipykernel>=6.19.0",
  "scikit-learn>=1.2.0",
  "seaborn>=0.12.0",
  "folium>=0.14.0",
  "tensorflow<=2.13.0",
  "notebook>=6.5.0"
]
