[project]
name = "aaa-assignment-env"
version = "0.1.0"
description = "AAA-Team-Assignment"
readme = "README.md"
requires-python = ">=3.9.0, <3.12.0"

dependencies = [
  "pandas>=1.5,<2.1",
  "numpy==1.26.4",
  "geopandas>=1.0.0",
  "h3>=3.7.0",
  "haversine>=2.9.0",
  "matplotlib>=3.9.0",
  "pip>=25.0.0",
  "pqdm>=0.2.0",
  "statsmodels>=0.14.0",
  "ipykernel>=6.19.0",
  "scikit-learn>=1.2.0",
  "seaborn>=0.12.0",
  "folium>=0.14.0",
  "notebook>=6.5.0",
  "tensorflow-io-gcs-filesystem==0.28.0",
  "tensorflow==2.10",
]
